[project]
name = "get-papers-list"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "typer (>=0.15.2,<0.16.0)",
    "rich (>=14.0.0,<15.0.0)",
    "lxml (>=5.3.2,<6.0.0)"
]

[tool.poetry]
packages = [{include = "get_papers_list", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
get-papers-list = "get_papers_list.cli:main"
